--- a/src/app/(beforeLogin)/_component/signup.module.css
+++ b/src/app/(beforeLogin)/_component/signup.module.css
@@ -4,15 +4,15 @@
     display: flex;
     justify-content: center;
     position: absolute;
-    background-color: rgba(0, 0, 0, 0.4);
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
+    background-color: rgba(0, 0, 0, 0.4);
 }
 
 .modal {
-    background-color: #ffffff;
+    background: #ffffff;
     position: relative;
     top: 5%;
     max-width: 80vw;
@@ -20,7 +20,7 @@
     border-radius: 16px;
     display: flex;
     flex-direction: column;
-    height: 450px;
+    height: 550px;
 }
 
 .modalHeader {
@@ -47,7 +47,6 @@
     position: relative;
     margin: 12px 0;
 }
-
 .inputLabel {
     width: 100%;
     display: inline-block;
@@ -60,11 +59,9 @@
     padding: 8px 8px 0;
     color: rgb(83, 100, 113);
 }
-
 .inputLabel:focus-within {
     color: red;
 }
-
 .input {
     width: 100%;
     border: none;
@@ -85,16 +82,12 @@
     background-color: rgb(15, 20, 25);
     color: white;
     font-size: 17px;
-    cursor: pointer;
-    border: none;
 }
-
 .actionButton:disabled {
     opacity: 0.5;
 }
-
 .actionButton:hover {
-    background-color: rgb(39, 44, 48);
+    background-color: rgb(39,44,48);
 }
 
 .closeButton {
@@ -103,7 +96,7 @@
     border-radius: 17px;
     border: none;
     cursor: pointer;
-    background-color: #ffffff;
+    background-color: #fff;
     position: absolute;
     left: 16px;
     top: 16px;
@@ -112,5 +105,5 @@
     justify-content: center;
 }
 .closeButton:hover {
-    background-color: rgb(15, 20, 25, 0.1);
+    background-color: rgba(15,20,25, 0.1);
 }
