--- a/src/app/(afterLogin)/layout.module.css
+++ b/src/app/(afterLogin)/layout.module.css
@@ -113,6 +113,8 @@
 }
 
 .search input {
+    width: 100%;
+    border-radius: 21px;
     outline: none;
     background-color: inherit;
     border: none;
