--- a/src/app/(afterLogin)/layout.module.css
+++ b/src/app/(afterLogin)/layout.module.css
@@ -56,18 +56,49 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 52px;
     box-shadow: rgba(0,0,0,0.08) 0px 8px 28px;
     background-color: rgb(29, 155, 250);
-    width: 234px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
     border: none;
     color: rgb(255, 255, 255);
     font-weight: 700;
     font-size: 17px;
-    border-radius: 26px;
 }
 .postButton:hover {
     background-color: rgb(26, 140, 216);
+}
+.postButton span {
+    display: none;
+}
+.postButton svg {
+    display: inline-block;
+    fill: white;
+    width: 24px;
+}
+@media all and (min-width: 1300px){
+    .postButton {
+        margin: 16px 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 52px;
+        box-shadow: rgba(0,0,0,0.08) 0px 8px 28px;
+        background-color: rgb(29, 155, 250);
+        width: 234px;
+        border: none;
+        color: rgb(255, 255, 255);
+        font-weight: 700;
+        font-size: 17px;
+        border-radius: 26px;
+    }
+    .postButton span {
+        display: inline-block;
+    }
+    .postButton svg {
+        display: none;
+    }
 }
 
 .rightSectionWrapper {
