feat: 로그인/로그아웃 화면 분기처리

--- a/src/app/(afterLogin)/_component/logoutButton.module.css
+++ b/src/app/(afterLogin)/_component/logoutButton.module.css
@@ -14,6 +14,7 @@
 .logoutUserName {
     display: none;
 }
+
 .logoutUserImage {
     display: flex;
     align-items: center;
@@ -22,18 +23,19 @@
     width: 40px;
     border-radius: 50%;
 }
-
 @media all and (min-width: 1300px) {
     .logoutButton {
         width: 258px;
     }
     .logoutUserName {
         margin: 0 12px;
+        display: inline-block;
     }
     .logoutUserName > div:first-child {
         font-weight: bold;
     }
 }
+
 .logoutButton:hover {
     background-color: rgba(15,20,25, 0.1);
     border-radius: 33px;
